--- a/reserveTime/core/templates/company-admin-page.html
+++ b/reserveTime/core/templates/company-admin-page.html
@@ -26,7 +26,8 @@
 <body id="company-admin-body">
     
     {% include 'partials/company-header.html' %}
-  
+    {% include 'partials/mobile-menu.html' %}
+    
     <main>
         <div class="mt-5 mb-5 company-admin-container">
             <div class="row">
