--- a/reserveTime/core/templates/company-comments.html
+++ b/reserveTime/core/templates/company-comments.html
@@ -22,7 +22,8 @@
 <body id="company-admin-body">
     
     {% include 'partials/company-header.html' %}
-
+    {% include 'partials/mobile-menu.html' %}
+    
     <main>
         <div class="container mt-3 company-admin-container">
             <div class="row">
