--- a/reserveTime/core/templates/company-tables.html
+++ b/reserveTime/core/templates/company-tables.html
@@ -34,7 +34,7 @@
 <body id="company-admin-body">
     
     {% include 'partials/company-header.html' %}
-   
+    {% include 'partials/mobile-menu.html' %}
     
     <main>
         <div class="full">
