--- a/reserveTime/core/templates/company-infos.html
+++ b/reserveTime/core/templates/company-infos.html
@@ -22,7 +22,7 @@
 <body id="company-admin-body">
     
     {% include 'partials/company-header.html' %}
-
+    {% include 'partials/mobile-menu.html' %}
     
     <main>
         <div class="full">
