--- a/reserveTime/core/templates/company-photos.html
+++ b/reserveTime/core/templates/company-photos.html
@@ -24,11 +24,13 @@
 <body id="company-admin-body">
     
     {% include 'partials/company-header.html' %}
+    {% include 'partials/mobile-menu.html' %}
 
     <main class="full-h">
         <div class="full full-h">
+            
             <div class="row full-h  justify-content-center">
-                <div class="col-3 col-lg-2 bg-white p-0 admin-menu-col header-shadow">
+                <div class="col-12 col-lg-2 bg-white p-0 admin-menu-col header-shadow">
                     <div class="admin-menu-box mt-5">
                         <nav>
                             <ul class="admin-menu-list">
@@ -92,7 +94,7 @@
                         </nav>
                     </div>
                 </div>
-                <div class="col-9 col-lg-10">
+                <div class="col-12 col-lg-10">
                     <div class="container mt-3">
                         <div class="row">
                             <h3 class="full bottom-border bold pb-3 mb-5">
