--- a/reserveTime/core/templates/company-users.html
+++ b/reserveTime/core/templates/company-users.html
@@ -23,7 +23,8 @@
 <body id="company-admin-body">
     
     {% include 'partials/company-header.html' %}
-    
+    {% include 'partials/mobile-menu.html' %}
+
     <main class="full-h">
         <div class="full full-h">
             <div class="row full-h  justify-content-center">
@@ -94,37 +95,39 @@
                 <div class="col-9 col-lg-10">
                     <div class="container mt-5 company-admin-container">
                         <div class="row bg-white header-shadow p-3">
-                            <h3 class="full bottom-border bold pb-3 mb-5">All users reserved your restaurant</h3>
+                            <h3 class="full bottom-border bold pb-3 mb-5 text-center">All users reserved your restaurant</h3>
                             <div class="user-box full">
                                 {% for user in reserved_users %}
-                                    <div class="user-item row">
-                                        <div class="col-3 comment-author">
-                                            <div class="reserve-author-profile-img">{{user.first_name|slice:"1"}}{{user.last_name|slice:"1"}}</div>
-                                            <div class="user-username">{{user.username}}</div>
-                                            <div class="user-address">San Francisco</div>
-                                            <div class="user-comments-count">
-                                                <p class="review-text mr-4 ml-4"><i class="far fa-comment"></i> 4 reviews</p>
+                                    {% ifchanged user.user %}
+                                        <div class="user-item row">
+                                            <div class="col-3 comment-author">
+                                                <div class="reserve-author-profile-img">{{user.user.first_name|slice:"1"}}{{user.user.last_name|slice:"1"}}</div>
+                                                <div class="user-username">{{user.user.username}}</div>
+                                                <div class="user-address">San Francisco</div>
+                                                <div class="user-comments-count">
+                                                    <p class="review-text mr-4 ml-4"><i class="far fa-comment"></i> {% if user.reviews > 1 %}{{user.reviews}} reviews {% else %} {{user.reviews}} review{% endif %}</p>
+                                                </div>
+                                            </div>
+                                            <div class="col-9">
+                                                <div class="d-flex">
+                                                    <div class="posted-date pl-4">
+                                                        <p>Last Reservation on {{user.last_reserved_date}}</p>
+                                                    </div>
+                                                </div>
+                                                <div class="d-flex">
+                                                    <div class="posted-date pl-4">
+                                                        <p>Number of reservations : {{user.reservation_count}} </p>
+                                                    </div>
+                                                </div>
+                                                <div class="d-flex">
+                                                    <div class="posted-date pl-4">
+                                                        <p>Total money for all reservations : {{user.total_price}}$</p>
+                                                    </div>
+                                                </div>
+                                                
                                             </div>
                                         </div>
-                                        <div class="col-9">
-                                            <div class="d-flex">
-                                                <div class="posted-date pl-4">
-                                                    <p>Last Reservation on July 7, 2020</p>
-                                                </div>
-                                            </div>
-                                            <div class="d-flex">
-                                                <div class="posted-date pl-4">
-                                                    <p>Number of reservations : 4</p>
-                                                </div>
-                                            </div>
-                                            <div class="d-flex">
-                                                <div class="posted-date pl-4">
-                                                    <p>Total money for all reservations : 123$</p>
-                                                </div>
-                                            </div>
-                                            
-                                        </div>
-                                    </div>
+                                    {% endifchanged %}
                                 {% endfor %}
                             </div>
                         </div>
@@ -140,7 +143,6 @@
     <script src="{% static 'js/main.js' %}"></script>
     <script>
         $(document).ready(function(){
-            
 
             $('.link-box').hover(function(){
                 height = $(this).height()
