--- a/reserveTime/static/css/style.css
+++ b/reserveTime/static/css/style.css
@@ -203,7 +203,7 @@ h3{
     -webkit-box-shadow: 0px 3px 17px -9px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 3px 17px -9px rgba(0,0,0,0.75);
     box-shadow: 0px 3px 17px -9px rgba(0,0,0,0.75);
-    /* top: -5px; */
+    transform: scale(1.03);
 }
 
 .card-img{
@@ -216,7 +216,6 @@ h3{
     height: 100%;
     object-fit: cover;
 }
-
 .card-body{
     padding: 5px;
     color: #000;
@@ -689,9 +688,9 @@ box-shadow: 0px 3px 19px -7px rgba(0,0,0,0.75);
 }
 
 .header-shadow{
-    -webkit-box-shadow: 0px 0px 14px -8px rgba(0,0,0,0.75);
-    -moz-box-shadow: 0px 0px 14px -8px rgba(0,0,0,0.75);
-    box-shadow: 0px 0px 14px -8px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 0px 0px 10px -8px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 10px -8px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 10px -8px rgba(0,0,0,0.75);
 }
 
 .admin-header .left{
@@ -737,4 +736,20 @@ canvas{
 .user-box{
     max-width: 90%;
     margin: auto;
+}
+.menu-box-left{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+}
+.menu-box-in{
+    position: fixed;
+    width: 300px;
+    height: 100%;
+    background-color: #fff;
+    z-index: 1000;
+    -webkit-box-shadow: 9px -1px 57px -16px rgba(255,255,255,0.73);
+    -moz-box-shadow: 9px -1px 57px -16px rgba(255,255,255,0.73);
+    box-shadow: 9px -1px 57px -16px rgba(255,255,255,0.73);
 }
